# antigravity-starter-kit

./: BOOTSTRAP.md  README.md  bootstrap.py  pyproject.toml
.agent/: AGENTS.md  QUICK_REFERENCE.md  init_agent_system.sh  next_steps.md
.agent/history/next_steps/: next_steps_2026-01-23.md  next_steps_2026-01-24.md  next_steps_2026-01-25.md  next_steps_2026-01-25_arch_refactor.md  next_steps_2026-01-26.md  next_steps_2026-01-27.md  next_steps_2026-01-28.md  next_steps_2026-02-01.md
.agent/memory/: AGENT_LESSONS.md
.agent/resources/: qgis_gold_snippets.md
.agent/skills/coding-standards/: SKILL.md
.agent/skills/project-context/: SKILL.md
.agent/skills/qa-standards/: SKILL.md
.agent/workflows/: crea-commit.md  inicia-sesion.md  refactor-code.md  run-tests.md
.github/workflows/: quality.yml  test.yml
docs/: AGENT_ARCHITECTURE.md  UPGRADE_FRAMEWORK_GEN2.md
scaffold/: AGENTS.md
scaffold/memory/: agent_metrics.json
scaffold/processing/: algorithm_template.py
scaffold/skills/data-science/: SKILL.md
scaffold/skills/data-science/examples/: eda_template.py
scaffold/skills/data-science/scripts/: generate_mock_data.py  validate_dataset.py
scaffold/ui/: dialog_template.py
scaffold/workflows/: cierra-sesion.md  inicia-sesion.md
scripts/: skill_sync.py
