[project]
name = "antigravity-project-template"
version = "1.0.0"
description = "Starter kit for Antigravity-powered projects"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "ai-context-core>=3.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "black==24.1.0",
    "mypy>=1.10",
]

[tool.uv]
managed = true
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']
